--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <button type="button" class="btn btn-lg btn-primary">
             <span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
         </a>
-        <a href="/viewTables">
+        <a href="/makeReservation">
           <button type="button" class="btn btn-danger btn-lg">
             <span class="glyphicon glyphicon-credit-card"></span>Make Reservation</button>
         </a>
