--- a/viewRest.html
+++ b/viewRest.html
@@ -67,8 +67,19 @@
     <script type="text/javascript">
 
         function runTableQuery() {
+//This variable will assign current url and its current port
+            var currentURL = window.location.origin;
 
-            
+            $.ajax({
+                url: currentURL + "/api/makeReservation",
+                method:"GET"
+
+            }).then(function(tableData){
+console.log("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~");
+console.log("Url: "+currentURL+ "/api/tables");
+console.log("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~");
+
+            })
         }
 
 	
